option('mac-address-fru-bus', 
       type : 'integer', 
       value : -1, 
       description: 'The i2c bus index of FRU device which includes MAC ADDRESS information')

option('mac-address-fru-addr',
       type : 'integer',
       value : 0,
       description: 'The i2c address (0x08->0x77)  of FRU device which includes MAC ADDRESS information')

